--- a/source/_posts/2015-07-07-fw1-3-1-rc-2.markdown
+++ b/source/_posts/2015-07-07-fw1-3-1-rc-2.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 3.1 Release Candidate 2 Available!"
 date: 2015-07-07 16:40
 comments: true
-categories: [releases, fw1, di1]
+categories: [releases, fw1, di1, aop1]
 ---
 The second Release Candidate of FW/1 3.1 is now available for testing. You [download FW/1 3.1 RC 2 from GitHub](https://github.com/framework-one/fw1/releases/tag/v3.1-rc2).
 
