--- a/source/_posts/2015-07-12-fw1-3-1-released.markdown
+++ b/source/_posts/2015-07-12-fw1-3-1-released.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FW/1 3.1 Released!"
 date: 2015-07-12 20:00
 comments: true
-categories: [releases, fw1, di1]
+categories: [releases, fw1, di1, aop1]
 ---
 The "gold" release of FW/1 3.1 (3.1.0) is now available for production use! You can [download FW/1 3.1.0 from GitHub](https://github.com/framework-one/fw1/releases/tag/v3.1.0).
 
