--- a/source/_posts/2011-12-18-fw1-2-0-released.markdown
+++ b/source/_posts/2011-12-18-fw1-2-0-released.markdown
@@ -5,4 +5,4 @@ date: 2011-12-18 18:51:18 -0700
 comments: true
 categories: [releases, fw1]
 ---
-After a long period of testing out in the wild FW/1 2.0 reached RC2 back in October and no further bugs have been reported. Only documentation remained and that has now been completed. FW/1 2.0 is gold and can be downloaded from [FW/1's RIAForge site](http://fw1.riaforge.org/). Happy Holidays!
+After a long period of testing out in the wild FW/1 2.0 reached RC2 back in October and no further bugs have been reported. Only documentation remained and that has now been completed. FW/1 2.0 is gold and can be downloaded from [FW/1's GitHub Releases page](https://github.com/framework-one/fw1/releases). Happy Holidays!
