--- a/source/_posts/2017-06-16-fw1-4-1-0-rc1.markdown
+++ b/source/_posts/2017-06-16-fw1-4-1-0-rc1.markdown
@@ -7,7 +7,7 @@ categories: [releases, fw1, di1, aop1, clojure]
 ---
 The first [Release Candidate of FW/1 4.1.0](https://github.com/framework-one/fw1/releases/tag/v4.1.0-rc1) is available for testing.
 
-This is a maintenance release for FW/1 4.0.0 that includes a number of bug fixes and some minor enhancements. The most important bug fix addresses a race condition that could cause transient beans to be partially resolved, leading to dependencies not being available under heavy load conditions. My thanks to [John Whish](https://github.com/aliaspooryorik) and [J Berquist](https://github.com/jcberquist) for their work in tracking that down and providing a patch to address it!
+This is a maintenance release for FW/1 4.0.0 that includes a number of bug fixes and some minor enhancements. The most important bug fix addresses a race condition that could cause transient beans to be partially resolved, leading to dependencies not being available under heavy load conditions. My thanks to [John Whish](https://github.com/aliaspooryorik) and [John Berquist](https://github.com/jcberquist) for their work in tracking that down and providing a patch to address it!
 
 Other bug fixes mostly focus on error handling.
 
