--- a/source/_posts/2019-03-27-fw1-roadmap.markdown
+++ b/source/_posts/2019-03-27-fw1-roadmap.markdown
@@ -13,12 +13,12 @@ There have been two very small enhancements on the develop branch since then (th
 
 ## The Roadmap
 
-The roadmap document (linked above) talks about a refactoring of the lifecycle functionality that was intended to simplify `Application.cfc` and the "Alternative Application Structure" in current FW/1 apps but it would ultimately have been a significant breaking change (hence the mention of an intermediate 4.5 migration release before the breaking 5.0 release). Since that was mostly driven by my architectural preferences, I don't see any value in any new maintainers following that path -- I never fleshed out, on paper, what that should look like so I'm going to close out the associated GitHub issue for it. Making subsystems more self-contained and more "pluggable" probably should be a goal for any new maintainers, but tackled more incrementally.
+The roadmap document (linked above) talks about a refactoring of the lifecycle functionality that was intended to simplify `Application.cfc` and the "Alternative Application Structure" in current FW/1 apps but it would ultimately have been a significant breaking change (hence the mention of an intermediate 4.5 migration release before the breaking 5.0 release). Since that was mostly driven by my architectural preferences, I don't see any value in any new maintainers following that path -- I never fleshed out, on paper, what that should look like so I'm going to close out the associated GitHub issue for it. Making subsystems more self-contained and more "pluggable" probably should be a goal for any new maintainers, but tackled more incrementally. Beyond that, I don't know what should be on a roadmap now: perhaps minimal, careful maintenance to fix bugs and stay compatible with new versions of Lucee and Adobe ColdFusion is all that is really needed?
 
 ## My Road to Here
 
-I've made no secret of how my work has transitioned from CFML to Clojure over the last roughly nine years. I initially ported FW/1 to Clojure but then decided to sunset that port, as it became clear that FW/1 added very little value to a (simpler) combination of Ring, Compojure, Component, and Selmer. At work, we ported our CFML FW/1 apps to Clojure FW/1 apps and then to plain Clojure apps a few years ago. Our primary CFML app -- built with ColdBox -- was retired completely this month, in favor of a React.js-based front end and a Clojure-based back end. We have two ColdBox apps remaining: a small, customer-facing app that we plan to redesign and rebuild (in Clojure) over the next year, and a medium-sized internal "administration" app that we started migrating to Clojure last year. We've gone from four servers running Lucee to just one, and expect to retire that before year end.
+I've made no secret of how my work has transitioned from CFML to Clojure over the last roughly nine years. I initially ported FW/1 to Clojure but then decided to sunset that port, as it became clear that FW/1 added very little value to a (simpler) combination of the Ring, Compojure, Component, and Selmer libraries. At work, we ported our CFML FW/1 apps to Clojure FW/1 apps and then to plain Clojure apps a few years ago. Our primary CFML app -- built with ColdBox -- was retired completely this month, in favor of a React.js-based front end and a Clojure-based back end. We have two ColdBox apps remaining: a small, customer-facing app that we plan to redesign and rebuild (in Clojure) over the next year, and a medium-sized internal "administration" app that we started migrating to Clojure last year. We've gone from four servers running Lucee to just one, and expect to retire that before year end.
 
-I got started with CFML just over seventeen years ago, when my then-employer Macromedia acquired Allaire, and as a technology it has been good to me throughout that time -- at Macromedia, at Adobe, as a freelancer, at Broadchoice (Flex, Groovy, and Railo), as part of Railo Inc, as a freelancer again, and for several years at [World Singles Networks](https://worldsinglesnetworks.com) where I also found myself writing Scala for a year or so and then Clojure. The CFML community is one of the friendliest, most supportive technology groups I've met, in a career that spans back to the early 80's, and I've missed seeing my CFML friends at conferences as my work focus has shifted -- it's been six years now since I last attended a CFML conference!
+I got started with CFML over seventeen years ago, when my then-employer Macromedia acquired Allaire, and as a technology it has been good to me throughout that time -- at Macromedia, at Adobe, as a freelancer, at Broadchoice (Flex, Groovy, and Railo), as part of Railo Inc, as a freelancer again, and for several years at [World Singles Networks](https://worldsinglesnetworks.com) where I also found myself writing Scala for a year or so and then Clojure. The CFML community is one of the friendliest, most supportive technology groups I've met, in a career that spans back to the early 80's, and I've missed seeing my CFML friends at conferences as my work focus has shifted -- it's been six years now since I last attended a CFML conference!
 
 I expect I'll still lurk on the CFML Slack for quite a while, and I'll stay subscribed to the FW/1 mailing list -- forever, I expect -- so folks can still reach me for FW/1 and CFML questions and general chit-chat.
